Fix overflown text in notice popup of Ninja announcement plugin

--- a/wp-content/plugins/ninja-announcements/css/ninja-annc-display.css
+++ b/wp-content/plugins/ninja-announcements/css/ninja-annc-display.css
@@ -28,7 +28,7 @@
 }
 
 .ninja-annc-content {
-  width: 600px;
+  width: 500px;
   margin:0 auto;
 }
 
